Web Inspector: Node details sidebar sections have unclear delineation in Dark Mode https://bugs.webkit.org/show_bug.cgi?id=200603 <rdar://problem/54146925>
Reviewed by Devin Rousso.

* UserInterface/Views/DetailsSection.css:
(@media (prefers-color-scheme: dark)):
(.details-section .details-section,):
Give a details section header a different color than a normal sidebar header.


Canonical link: https://commits.webkit.org/214362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248495 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
+++ b/Source/WebInspectorUI/UserInterface/Views/DetailsSection.css
@@ -294,9 +294,8 @@ body[dir=rtl] .details-section > .header::before {
     }
 
     .details-section .details-section,
-    .details-section .details-section > .header,
-    .details-section.computed-style-properties:not(.collapsed) > .header{
-        background-color: var(--background-color);
+    .details-section .details-section > .header {
+        background-color: var(--background-color-content);
     }
 
     .details-section .details-section:not(.collapsed) > .header {
